kubectl_deployment/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serp-fetcher-fastapi-service
  namespace: jg-workers
spec:
  selector:
    app: serp-fetcher-fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
  type: NodePort
